commit-2 copyright update

--- a/view/adminhtml/templates/analytics.phtml
+++ b/view/adminhtml/templates/analytics.phtml
@@ -1,6 +1,11 @@
 <!--
- Copyright (c) Vaimo Group. All rights reserved.
- See LICENSE_VAIMO.txt for license details.
+  Copyright © 2025 Ritu Sinha
+
+  This source code is licensed under the MIT license
+  that is bundled with this package in the file LICENSE.
+
+  You are free to use, modify, and distribute this software
+  in accordance with the terms of the MIT License.
 -->
 <div class="admin__data-grid-wrap">
     <h2>Intent Predictor Analytics</h2>
