--- a/view/adminhtml/layout/intent_intent_index.xml
+++ b/view/adminhtml/layout/intent_intent_index.xml
@@ -1,6 +1,11 @@
 <!--
- Copyright (c) Vaimo Group. All rights reserved.
- See LICENSE_VAIMO.txt for license details.
+  Copyright © 2025 Ritu Sinha
+
+  This source code is licensed under the MIT license
+  that is bundled with this package in the file LICENSE.
+
+  You are free to use, modify, and distribute this software
+  in accordance with the terms of the MIT License.
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd"
