--- a/view/frontend/templates/intent_blocks.phtml
+++ b/view/frontend/templates/intent_blocks.phtml
@@ -1,3 +1,12 @@
+<!--
+  Copyright © 2025 Ritu Sinha
+
+  This source code is licensed under the MIT license
+  that is bundled with this package in the file LICENSE.
+
+  You are free to use, modify, and distribute this software
+  in accordance with the terms of the MIT License.
+-->
 <div id="intent-block-container" class="intent-block-container">
     <div class="loading-message">Loading personalized content...</div>
 </div>
