--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -10,19 +10,19 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Vaimo_IntentPredictor::css/intent-block.css"/>
+        <css src="SinhaR_IntentPredictor::css/intent-block.css"/>
     </head>
     <body>
         <referenceContainer name="content.top">
         <block class="Magento\Framework\View\Element\Template"
-               name="vaimo.intent.blocks"
-               template="Vaimo_IntentPredictor::intent_blocks.phtml"
+               name="sinhar.intent.blocks"
+               template="SinhaR_IntentPredictor::intent_blocks.phtml"
                before="-" />
         </referenceContainer>
         <referenceContainer name="before.body.end">
             <block class="Magento\Framework\View\Element\Template"
-                   name="vaimo.intent.tracker"
-                   template="Vaimo_IntentPredictor::tracker.phtml"/>
+                   name="sinhar.intent.tracker"
+                   template="SinhaR_IntentPredictor::tracker.phtml"/>
         </referenceContainer>
     </body>
 </page>
